--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     },
     "scripts": {
       "dev": "vite",
-      "build": "tsc && vite build",
+      "build": "tsc",
       "preview": "vite preview"
     }
   }
