--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "domain-for-sale-landing-page",
     "version": "0.1.0",
     "private": true,
-    "type": "module",
     "dependencies": {
       "@radix-ui/react-accordion": "^1.2.3",
       "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -51,13 +50,12 @@
       "@types/node": "^20.10.0",
       "@types/react": "^18.3.3",
       "@types/react-dom": "^18.3.0",
-      "@vitejs/plugin-react": "^4.3.4",
-      "typescript": "^5.6.3",
-      "vite": "^6.3.5"
+      "@vitejs/plugin-react-swc": "^3.10.2",
+      "typescript": "^5.9.3",
+      "vite": "6.3.5"
     },
     "scripts": {
       "dev": "vite",
-      "build": "tsc",
-      "preview": "vite preview"
+      "build": "vite build"
     }
   }
